--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent position-absolute w-100 z-3">
       <div class="container">
-        <a class="navbar-brand fw-bold text-white" href="#">LEGAL LEAD PROS</a>
+        <a class="navbar-brand text-white" href="#">LEGAL LEAD PROS</a>
       </div>
     </nav>
 
@@ -23,7 +23,7 @@
         <div class="row align-items-center">
           <!-- Left Content -->
           <div class="col-lg-7 col-md-12 text-white hero-content mb-4 mb-lg-0">
-            <h1 class="display-4 fw-bold mb-3">Grow Your Law Firm With A Site That Converts</h1>
+            <h1 class="display-4 mb-3">Grow Your Law Firm With A Site That Converts</h1>
             <p class="lead mb-4">Turn more website visitors into clients with a custom, mobile-friendly website, built exclusively for your law firm.</p>
             <div class="mb-3 d-flex align-items-center gap-2">
               <img src="images/Google.png" alt="Google Badge" height="32">
@@ -129,7 +129,7 @@
               </div>
               <div class="col-md-3 col-6">
                 <div class="section3-feature-item text-center">
-                  <img src="images/paractice-pages.png" alt="Showcase Expertise" class="mb-2 section3-feature-icon">
+                  <img src="images/call-to-action.png" alt="Showcase Expertise" class="mb-2 section3-feature-icon">
                   <div class="section3-feature-desc">Generate more inquiries with clear calls-to-action</div>
                 </div>
               </div>
@@ -253,52 +253,112 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <div class="testimonial-slide">
-                      <img src="images/google-stars.png" alt="Google Stars" class="testimonial-stars mb-2">
-                      <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide mb-3">
                       <div class="testimonial-text">"Legal Lead Pros transformed our online presence. We saw a 40% increase in leads within the first month!"</div>
-                      <div class="testimonial-author">— John Smith, Smith & Associates</div>
+                      <div class="d-flex align-items-center justify-content-between mt-4 gap-3 flex-wrap">
+                        <div class="d-flex align-items-center gap-2">
+                          <img src="images/google-stars.png" alt="Google Stars" class="testimonial-google-stars">
+                          <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide">
+                        </div>
+                        <div class="d-flex align-items-center gap-3">
+                          <button class="testimonial-arrow testimonial-arrow-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" aria-label="Previous">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 19L8 12L15 5" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                          <button class="testimonial-arrow testimonial-arrow-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" aria-label="Next">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9 5L16 12L9 19" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="testimonial-slide">
-                      <img src="images/google-stars.png" alt="Google Stars" class="testimonial-stars mb-2">
-                      <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide mb-3">
                       <div class="testimonial-text">"The team truly understands the legal industry. Our new website is both beautiful and effective."</div>
-                      <div class="testimonial-author">— Jane Doe, Doe Law Group</div>
+                      <div class="d-flex align-items-center justify-content-between mt-4 gap-3 flex-wrap">
+                        <div class="d-flex align-items-center gap-2">
+                          <img src="images/google-stars.png" alt="Google Stars" class="testimonial-google-stars">
+                          <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide">
+                        </div>
+                        <div class="d-flex align-items-center gap-3">
+                          <button class="testimonial-arrow testimonial-arrow-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" aria-label="Previous">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 19L8 12L15 5" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                          <button class="testimonial-arrow testimonial-arrow-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" aria-label="Next">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9 5L16 12L9 19" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="testimonial-slide">
-                      <img src="images/google-stars.png" alt="Google Stars" class="testimonial-stars mb-2">
-                      <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide mb-3">
                       <div class="testimonial-text">"We get compliments from clients all the time. The process was smooth and the results speak for themselves."</div>
-                      <div class="testimonial-author">— Michael Lee, Lee & Partners</div>
+                      <div class="d-flex align-items-center justify-content-between mt-4 gap-3 flex-wrap">
+                        <div class="d-flex align-items-center gap-2">
+                          <img src="images/google-stars.png" alt="Google Stars" class="testimonial-google-stars">
+                          <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide">
+                        </div>
+                        <div class="d-flex align-items-center gap-3">
+                          <button class="testimonial-arrow testimonial-arrow-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" aria-label="Previous">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 19L8 12L15 5" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                          <button class="testimonial-arrow testimonial-arrow-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" aria-label="Next">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9 5L16 12L9 19" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="testimonial-slide">
-                      <img src="images/google-stars.png" alt="Google Stars" class="testimonial-stars mb-2">
-                      <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide mb-3">
                       <div class="testimonial-text">"Highly recommend Legal Lead Pros for any law firm looking to grow. Professional, responsive, and results-driven."</div>
-                      <div class="testimonial-author">— Sarah Kim, Kim Legal Solutions</div>
+                      <div class="d-flex align-items-center justify-content-between mt-4 gap-3 flex-wrap">
+                        <div class="d-flex align-items-center gap-2">
+                          <img src="images/google-stars.png" alt="Google Stars" class="testimonial-google-stars">
+                          <img src="images/local-guide.png" alt="Local Guide" class="testimonial-local-guide">
+                        </div>
+                        <div class="d-flex align-items-center gap-3">
+                          <button class="testimonial-arrow testimonial-arrow-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" aria-label="Previous">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M15 19L8 12L15 5" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                          <button class="testimonial-arrow testimonial-arrow-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" aria-label="Next">
+                            <span class="testimonial-arrow-icon">
+                              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M9 5L16 12L9 19" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
+                              </svg>
+                            </span>
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="d-flex align-items-center justify-content-end gap-3 mt-4">
-                  <button class="testimonial-arrow testimonial-arrow-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" aria-label="Previous">
-                    <span class="testimonial-arrow-icon">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M15 19L8 12L15 5" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                    </span>
-                  </button>
-                  <button class="testimonial-arrow testimonial-arrow-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" aria-label="Next">
-                    <span class="testimonial-arrow-icon">
-                      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M9 5L16 12L9 19" stroke="#222" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>
-                    </span>
-                  </button>
                 </div>
               </div>
             </div>
@@ -341,29 +401,34 @@
     </section>
 
     <!-- Section 7: Footer -->
-    <footer class="footer-section py-5">
+    <footer class="footer-section">
       <div class="container">
-        <div class="row align-items-start justify-content-between mb-4">
+        <div class="row justify-content-between">
           <!-- Left: Brand and Description -->
-          <div class="col-lg-4 mb-4 mb-lg-0">
+          <div class="col-lg-5 col-md-12 mb-4 mb-lg-0 text-center text-lg-start">
             <div class="footer-brand mb-2">Legal Lead <span style="color: #FFDD03;">Pros</span></div>
             <div class="footer-desc">Legal Lead Pros is the premier digital marketing agency for law firms. From paid ads to SEO to social, we use the latest online marketing strategies to grow your legal practice.</div>
           </div>
-          <!-- Center: Contact Info -->
-          <div class="col-lg-4 mb-4 mb-lg-0">
-            <div class="footer-contact-title mb-2">Contact</div>
-            <div class="footer-contact-info mb-2">15260 Ventura Blvd Suite 1200 Sherman Oaks, CA 91403<br>United States</div>
-            <div class="footer-contact-info mb-2"><a href="mailto:hello@legalleadpros.com" class="footer-link">hello@legalleadpros.com</a></div>
-            <div class="footer-contact-info mb-2"><a href="tel:+18887177007" class="footer-link">(888) 717-7007</a></div>
-          </div>
-          <!-- Right: Social Links -->
-          <div class="col-lg-4 d-flex flex-column align-items-lg-end align-items-center">
-            <div class="footer-social-title mb-2">Social Links</div>
-            <div class="footer-social-links mb-3">
-              <a href="#" class="footer-social mx-1">LinkedIn</a>
-              <a href="#" class="footer-social mx-1">Twitter</a>
-              <a href="#" class="footer-social mx-1">Facebook</a>
-              <a href="#" class="footer-social mx-1">Instagram</a>
+          <!-- Right: Contact & Social -->
+          <div class="col-lg-6 col-md-12">
+            <div class="row">
+              <!-- Contact -->
+              <div class="col-lg-7 col-md-6 mb-4 mb-lg-0 text-center text-lg-start">
+                <div class="footer-contact-title mb-2">Contact</div>
+                <div class="footer-contact-info mb-2">15260 Ventura Blvd Suite 1200 Sherman Oaks, CA 91403 United States</div>
+                <div class="footer-contact-info mb-2"><a href="mailto:hello@legalleadpros.com" class="footer-link">hello@legalleadpros.com</a></div>
+                <div class="footer-contact-info mb-2"><a href="tel:+18887177007" class="footer-link">(888) 717-7007</a></div>
+              </div>
+              <!-- Social -->
+              <div class="col-lg-5 col-md-6 text-center text-lg-start">
+                <div class="footer-social-title mb-2">Social Links</div>
+                <div class="footer-social-links mb-3">
+                  <a href="#" class="footer-social">LinkedIn</a>
+                  <a href="#" class="footer-social">Twitter</a>
+                  <a href="#" class="footer-social">Facebook</a>
+                  <a href="#" class="footer-social">Instagram</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -372,8 +437,12 @@
             <div class="footer-copyright">All rights reserved 2024 © Legal Lead Pros. <a href="#" class="footer-link">Privacy Policy</a></div>
           </div>
         </div>
+        <div class="footer-logo-img text-center mt-3">
+          <img src="images/legal-lead-pros.png" alt="Legal Lead Pros Logo" style="width: 100%; height: auto; display: inline-block; margin-top: 1.5em;" />
+        </div>
       </div>
     </footer>
+
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
