--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="row align-items-center">
           <!-- Left Content -->
           <div class="col-lg-7 col-md-12 text-white hero-content mb-4 mb-lg-0">
+            <h4 class="hero-subheading">Website Design for Lawyers</h4>
             <h1 class="display-4 mb-3">Grow Your Law Firm With A Site That Converts</h1>
             <p class="lead mb-4">Turn more website visitors into clients with a custom, mobile-friendly website, built exclusively for your law firm.</p>
             <div class="mb-3 d-flex align-items-center gap-2">
@@ -438,7 +439,7 @@
           </div>
         </div>
         <div class="footer-logo-img text-center mt-3">
-          <img src="images/legal-lead-pros.png" alt="Legal Lead Pros Logo" style="width: 100%; height: auto; display: inline-block; margin-top: 1.5em;" />
+          <img src="images/legal-lead-pros.png" alt="Legal Lead Pros Logo" style="width: 100%; height: auto; display: inline-block; margin-top: 3em;" />
         </div>
       </div>
     </footer>
